# zappy

./: .gitignore  Makefile  Untitled-2024-05-15-2117.excalidraw  client  client.py  client_lib.py
client/: client  client.py  group.py  player.py  progress-client.py  state.py
client/old/: broadcast  broadcast.py  client.py  color.py
client/py/: file.py  file2.py
client/states/: cluster_optimisation.py  color.py  exploration.py  group.py  groupe_state.py  incantation_state.py  state.py
graphics/: Camera2D.gd  ContentInfoRow.tscn  Egg.gd  Items.png.import  Network.gd  PlayerInfoBtn.gd  PlayerInfoBtn.tscn  TileMap.gd  content_info_row.gd  cuicui.json  egg.tscn  export_presets.cfg  hover_square.tscn  icon.svg.import  kevin_theme.tres  linemate_texture.res  main.gd  main.tscn  player.gd  player.gdshader  player.tscn  player_shader.tres  project.godot  sep_style.tres  team_name.gd  team_name.tscn  tileset.tres  trace_square.gd  trace_square.tscn
graphics/assets/: Arcade - Pac-Man - General Sprites.png.import  TilesetFloor.png.import
graphics/assets/characters/: Archer-Green.png.import  Character-Base.png.import  Human-Worker-Cyan.png.import  Mage-Cyan.png.import  Mage-Red.png.import  Soldier-Blue.png.import  Soldier-Yellow.png.import  Warrior-Blue.png.import  Warrior-Red.png.import
graphics/assets/sounds/: music.mp3.import
server/: Cargo.toml  communication.md  todolist.md
server/src/: communication.rs  connections.rs  main.rs  update_gui.rs  watcher.rs
server/src/game/: egg.rs  graphic_client.rs  gui.rs  level_up.rs  map.rs  mod.rs  player.rs  teams.rs
(+6 files in other folders)
