[package]
name = "zappy-server"
version = "0.1.0"
edition = "2021"
authors = ["nguiard", "sloquet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoll = "4.3.3"
libc = "0.2.153"
rand = "0.8.5"
shuffle = "0.1.7"
structopt = "0.3.26"
