[package]
name = "zappy-server"
version = "0.1.0"
edition = "2021"
authors = ["nguiard"]

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
ctrlc = "3.4.4"
epoll = "4.3.3"
libc = "0.2.153"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shuffle = "0.1.7"
structopt = "0.3.26"
